Finishes Embedded System Code

--- a/documentation/report/references.bib
+++ b/documentation/report/references.bib
@@ -226,6 +226,10 @@ location = {Yokohama, Japan},
 series = {ASP-DAC '01}
 }
 
+% parallel computing in embedded devices. We won't consider this but it may be worth mentioning
+% https://ieeexplore.ieee.org/document/1544328
+@INPROCEEDINGS{1544328,  author={Sha, E.H.M.},  booktitle={Conference, Emerging Information Technology 2005.},   title={Parallel embedded systems: optimizations and challenges},   year={2005},  volume={},  number={},  pages={4 pp.-},  doi={10.1109/EITC.2005.1544328}}
+
 % There are a lot of IoT devices
 % power is an important concern
 % lot of data must be processed
